<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.login.SignInFragment">

    <data>
        <import type="android.view.View"/>
        <variable
            name="signInFragment"
            type="net.franzka.courses.fragments.login.SignInFragment" />

        <variable
            name="viewModel"
            type="net.franzka.courses.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connexion"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/ed_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"

            android:hint="@string/pseudo_ou_adresse_email"

            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:autofillHints="" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/mot_de_passe"

            app:layout_constraintTop_toBottomOf="@id/ed_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/connexion"
            android:onClick="@{() -> signInFragment.signIn()}"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />

        <TextView
            android:id="@+id/textview_forgotten_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:text="@string/mot_de_passe_oublie_question"

            android:onClick="@{() -> signInFragment.forgottenPassword()}"

            app:layout_constraintTop_toBottomOf="@id/button_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:text="@{viewModel.message}"
            tools:text="message"
            android:textColor="@{viewModel.status ? @color/green : @color/error}"

            app:layout_constraintTop_toBottomOf="@id/textview_forgotten_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/design_default_color_primary"
            android:layout_margin="15dp"
            />


        <TextView
            android:id="@+id/textview_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:text="@string/vous_n_avez_pas_de_compte"

            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/view_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/s_enregistrer"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:onClick="@{() -> signInFragment.signUp()}"

            app:layout_constraintTop_toBottomOf="@id/textview_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/button_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:visibility="@{viewModel.waitingForResponse ? View.VISIBLE : View.GONE}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>