<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ForgottenPasswordFragment">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="net.franzka.courses.CoursesViewModel" />

        <variable
            name="forgottenPasswordFragment"
            type="net.franzka.courses.fragments.ForgottenPasswordFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oublie"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/ed_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"

            android:hint="@string/pseudo_ou_adresse_email"

            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/envoyer"

            android:onClick="@{() -> forgottenPasswordFragment.submit()}"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_login" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:textAlignment="center"
            android:text="@{viewModel.message}"
            tools:text="message"
            android:textColor="@{viewModel.status ? @color/green : @color/error}"

            app:layout_constraintTop_toBottomOf="@id/button_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_back_to_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/se_connecter"

            android:visibility="@{viewModel.status ? View.VISIBLE : View.INVISIBLE}"
            android:onClick="@{() -> forgottenPasswordFragment.backToLogin()}"

            app:layout_constraintTop_toBottomOf="@+id/tv_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />


        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/button_submit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:visibility="@{viewModel.waitingForResponse ? View.VISIBLE : View.GONE}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>